# Polaris

Polaris/: Makefile
Polaris/src/byzantineGroup/: byzantineGroup.go  connection.go
Polaris/src/client/: cevent.go  client.go
Polaris/src/common/: global.go  logger.go  utils.go
Polaris/src/config/: client.config.template  server-location.config.template  server_1-1.json.template  system.config.template
Polaris/src/configuration/: configuration.go  keysConfiguration.go
Polaris/src/membership-service-rpc/: membership.pb.go  membership.proto
Polaris/src/polaris-client/: client.go  config.go
Polaris/src/polaris-server/: server.go
Polaris/src/raftnode/: raftNode.go
Polaris/src/rpc/: common.proto  polaris.proto  sbft.proto
Polaris/src/server/: acceptBodyConnectionEvent.go  accessConsensusStateOp.go  bftResultReceiver.go  bftResultVerifier.go  consensusState.go  dissemination.go  orderRequestConnectionEvent.go  quorumCertificate.go  raft.go  requestManager.go  sendRequest.go  sendRequest_fixemu.go  server.go  serverRPCHandler.go  stateRequestConnectionEvent.go  stateRequestToMonitorConnectionEvent.go  stateResponseConnectionEvent.go  stateResponseToMonitorConnectionEvent.go  tcpManager.go  txnBodyStore.go  txnBodyToMonitorConnectionEvent.go  txnMsgToMonitorConnectionEvent.go  verifyCertificate.go  verifyCertificate_bypass.go
Polaris/src/tcptest/: Makefile  common.h  testclient.cpp  testserver.cpp
Polaris/src/tlv/: tlv.go
Polaris/src/transaction/: transaction.go
Polaris/src/util/: util.go
SBFT/bftengine/: CMakeLists.txt
SBFT/bftengine/include/bcstatetransfer/: SimpleBCStateTransfer.hpp
SBFT/bftengine/include/bftengine/: Digest.hpp  Replica.hpp  SimpleClient.hpp
SBFT/bftengine/include/communication/: CommDefs.hpp
SBFT/bftengine/include/simplestatetransfer/: SimpleStateTransfer.hpp
SBFT/bftengine/src/bcstatetransfer/: BCStateTran.cpp  BCStateTran.hpp  DataStore.hpp  InMemoryDataStore.cpp  InMemoryDataStore.hpp  Messages.hpp  MsgsCertificate.hpp  STDigest.cpp  STDigest.hpp
SBFT/bftengine/src/bftengine/: CheckpointMsg.hpp  ClientRequestMsg.cpp  ClientRequestMsg.hpp  ClientsManager.cpp  CollectorOfThresholdSignatures.hpp  ControllerWithSimpleHistory.cpp  Digest.cpp  FullCommitProofMsg.cpp  NewViewMsg.hpp  PartialCommitProofMsg.cpp  PartialCommitProofMsg.hpp  PartialExecProofsSet.cpp  PartialProofsSet.cpp  PartialProofsSet.hpp  PrePrepareMsg.cpp  PrePrepareMsg.hpp  ReplicaImp.cpp  ReplicaImp.hpp  SeqNumInfo.cpp  SeqNumInfo.hpp  SignedShareMsgs.cpp  SignedShareMsgs.hpp  SimpleClient.cpp  SkipCycleMsg.cpp  SkipCycleMsg.h  SysConsts.hpp  ViewChangeMsg.cpp  ViewChangeMsg.hpp  ViewChangeSafetyLogic.cpp  ViewChangeSafetyLogic.hpp  ViewsManager.cpp
SBFT/bftengine/src/communication/: PlainTcpCommunication.cpp
SBFT/bftengine/src/simplestatetransfer/: SimpleStateTran.cpp
SBFT/bftengine/tests/: CMakeLists.txt
SBFT/bftengine/tests/config/: test_comm_config.hpp  test_parameters.hpp
SBFT/bftengine/tests/simpleKVBC/include/: KVBCInterfaces.h  PolarisKey.h  SetOfKeyValuePairs.h
SBFT/bftengine/tests/simpleKVBC/rpc/: polaris.proto
SBFT/bftengine/tests/simpleKVBC/src/: BlockchainDBAdapter.cpp  CMakeLists.txt  ClientImp.cpp  ClientImp.h  DatabaseInterface.h  InMemoryDBClient.cpp  InMemoryDBClient.h  ReplicaImp.cpp  ReplicaImp.h
SBFT/bftengine/tests/simpleKVBCTests/: TestDefs.h  simpleKVBCTests.cpp
SBFT/bftengine/tests/simpleKVBCTests/TesterClient/: CMakeLists.txt  PolarisClient.cpp  concordclient.cpp  main.cpp
SBFT/bftengine/tests/simpleKVBCTests/TesterReplica/: CMakeLists.txt  main.cpp
SBFT/bftengine/tests/simpleKVBCTests/scripts/: run_concordgrpc.sh  run_replica.sh
SBFT/bftengine/tests/simpleStorage/: CMakeLists.txt
SBFT/bftengine/tests/simpleTest/: client.cpp  replica.cpp
SBFT/bftengine/tests/simpleTest/scripts/: runReplicas.sh
SBFT/threshsign/bench/: BenchThresholdBls.cpp
SBFT/threshsign/include/threshsign/: IThresholdAccumulator.h  ThresholdAccumulatorBase.h
SBFT/threshsign/src/bls/relic/: BlsMultisigAccumulator.cpp
SBFT/tools/: CMakeLists.txt  SigVerifier.cpp  TestGeneratedKeys.cpp
SBFT/tools/scripts/: runverify.sh
